library/src/libqevent.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QExposeEvent QExposeEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputDevice QInputDevice;
typedef struct QKeyCombination QKeyCombination;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPlatformSurfaceEvent QPlatformSurfaceEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef QContextMenuEvent::Reason Reason;                         // C++ enum
typedef int Reason;              // C ABI enum
QTLIBC_API QKeyEvent* QKeyEvent_new(int typeVal, int key, int modifiers);
QTLIBC_API QKeyEvent* QKeyEvent_new2(int typeVal, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers);
QTLIBC_API QKeyEvent* QKeyEvent_new3(int typeVal, int key, int modifiers, libqt_string text);
QTLIBC_API QKeyEvent* QKeyEvent_new4(int typeVal, int key, int modifiers, libqt_string text, bool autorep);
QTLIBC_API QKeyEvent* QKeyEvent_new5(int typeVal, int key, int modifiers, libqt_string text, bool autorep, uint16_t count);
QTLIBC_API QKeyEvent* QKeyEvent_new6(int typeVal, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, libqt_string text);
QTLIBC_API QKeyEvent* QKeyEvent_new7(int typeVal, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, libqt_string text, bool autorep);
QTLIBC_API QKeyEvent* QKeyEvent_new8(int typeVal, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, libqt_string text, bool autorep, uint16_t count);
QTLIBC_API QKeyEvent* QKeyEvent_new9(int typeVal, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, libqt_string text, bool autorep, uint16_t count, QInputDevice* device);
QTLIBC_API QKeyEvent* QKeyEvent_Clone(const QKeyEvent* self);
QTLIBC_API int QKeyEvent_Key(const QKeyEvent* self);
QTLIBC_API bool QKeyEvent_Matches(const QKeyEvent* self, int key);
QTLIBC_API int QKeyEvent_Modifiers(const QKeyEvent* self);
QTLIBC_API QKeyCombination* QKeyEvent_KeyCombination(const QKeyEvent* self);
QTLIBC_API libqt_string QKeyEvent_Text(const QKeyEvent* self);
QTLIBC_API bool QKeyEvent_IsAutoRepeat(const QKeyEvent* self);
QTLIBC_API int QKeyEvent_Count(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeScanCode(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeVirtualKey(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeModifiers(const QKeyEvent* self);
QTLIBC_API void QKeyEvent_Delete(QKeyEvent* self);
QTLIBC_API QFocusEvent* QFocusEvent_new(int typeVal);
QTLIBC_API QFocusEvent* QFocusEvent_new2(int typeVal, int reason);
QTLIBC_API QFocusEvent* QFocusEvent_Clone(const QFocusEvent* self);
QTLIBC_API bool QFocusEvent_GotFocus(const QFocusEvent* self);
QTLIBC_API bool QFocusEvent_LostFocus(const QFocusEvent* self);
QTLIBC_API int QFocusEvent_Reason(const QFocusEvent* self);
QTLIBC_API void QFocusEvent_Delete(QFocusEvent* self);
QTLIBC_API QPaintEvent* QPaintEvent_new(QRegion* paintRegion);
QTLIBC_API QPaintEvent* QPaintEvent_new2(QRect* paintRect);
QTLIBC_API QPaintEvent* QPaintEvent_Clone(const QPaintEvent* self);
QTLIBC_API QRect* QPaintEvent_Rect(const QPaintEvent* self);
QTLIBC_API QRegion* QPaintEvent_Region(const QPaintEvent* self);
QTLIBC_API void QPaintEvent_Delete(QPaintEvent* self);
QTLIBC_API QMoveEvent* QMoveEvent_new(QPoint* pos, QPoint* oldPos);
QTLIBC_API QMoveEvent* QMoveEvent_Clone(const QMoveEvent* self);
QTLIBC_API QPoint* QMoveEvent_Pos(const QMoveEvent* self);
QTLIBC_API QPoint* QMoveEvent_OldPos(const QMoveEvent* self);
QTLIBC_API void QMoveEvent_Delete(QMoveEvent* self);
QTLIBC_API QExposeEvent* QExposeEvent_new(QRegion* m_region);
QTLIBC_API QExposeEvent* QExposeEvent_Clone(const QExposeEvent* self);
QTLIBC_API QRegion* QExposeEvent_Region(const QExposeEvent* self);
QTLIBC_API void QExposeEvent_Delete(QExposeEvent* self);
QTLIBC_API QPlatformSurfaceEvent* QPlatformSurfaceEvent_new(int surfaceEventType);
QTLIBC_API void QPlatformSurfaceEvent_Delete(QPlatformSurfaceEvent* self);