src/qt/libqevent.bf

extension CQt
{
	[LinkName("QKeyEvent_new")]
	public static extern void* QKeyEvent_new(int64 typeVal, int32 key, int64 modifiers);
	[LinkName("QKeyEvent_new2")]
	public static extern void* QKeyEvent_new2(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers);
	[LinkName("QKeyEvent_new3")]
	public static extern void* QKeyEvent_new3(int64 typeVal, int32 key, int64 modifiers, libqt_string text);
	[LinkName("QKeyEvent_new4")]
	public static extern void* QKeyEvent_new4(int64 typeVal, int32 key, int64 modifiers, libqt_string text, bool autorep);
	[LinkName("QKeyEvent_new5")]
	public static extern void* QKeyEvent_new5(int64 typeVal, int32 key, int64 modifiers, libqt_string text, bool autorep, uint16 count);
	[LinkName("QKeyEvent_new6")]
	public static extern void* QKeyEvent_new6(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, libqt_string text);
	[LinkName("QKeyEvent_new7")]
	public static extern void* QKeyEvent_new7(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, libqt_string text, bool autorep);
	[LinkName("QKeyEvent_new8")]
	public static extern void* QKeyEvent_new8(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, libqt_string text, bool autorep, uint16 count);
	[LinkName("QKeyEvent_new9")]
	public static extern void* QKeyEvent_new9(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, libqt_string text, bool autorep, uint16 count, void* device);
	[LinkName("QKeyEvent_Clone")]
	public static extern void* QKeyEvent_Clone(void* c_this);
	[LinkName("QKeyEvent_Key")]
	public static extern int32 QKeyEvent_Key(void* c_this);
	[LinkName("QKeyEvent_Matches")]
	public static extern bool QKeyEvent_Matches(void* c_this, int64 key);
	[LinkName("QKeyEvent_Modifiers")]
	public static extern int64 QKeyEvent_Modifiers(void* c_this);
	[LinkName("QKeyEvent_KeyCombination")]
	public static extern void QKeyEvent_KeyCombination(void* c_this);
	[LinkName("QKeyEvent_Text")]
	public static extern libqt_string QKeyEvent_Text(void* c_this);
	[LinkName("QKeyEvent_IsAutoRepeat")]
	public static extern bool QKeyEvent_IsAutoRepeat(void* c_this);
	[LinkName("QKeyEvent_Count")]
	public static extern int32 QKeyEvent_Count(void* c_this);
	[LinkName("QKeyEvent_NativeScanCode")]
	public static extern uint32 QKeyEvent_NativeScanCode(void* c_this);
	[LinkName("QKeyEvent_NativeVirtualKey")]
	public static extern uint32 QKeyEvent_NativeVirtualKey(void* c_this);
	[LinkName("QKeyEvent_NativeModifiers")]
	public static extern uint32 QKeyEvent_NativeModifiers(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QKeyEvent_Delete")]
	public static extern void QKeyEvent_Delete(void* self);
}
public interface IQFocusEvent
{
	void* NativePtr { get; }
}
public class QFocusEvent : IQFocusEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 typeVal)
	{
		this.nativePtr = CQt.QFocusEvent_new(typeVal);
	}
	
	public ~this()
	{
		CQt.QFocusEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QFocusEvent_Clone(this.nativePtr);
	}
	
	public bool GotFocus()
	{
		return CQt.QFocusEvent_GotFocus(this.nativePtr);
	}
	
	public bool LostFocus()
	{
		return CQt.QFocusEvent_LostFocus(this.nativePtr);
	}
	
	public int64 Reason()
	{
		return CQt.QFocusEvent_Reason(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QFocusEvent_new")]
	public static extern void* QFocusEvent_new(int64 typeVal);
	[LinkName("QFocusEvent_new2")]
	public static extern void* QFocusEvent_new2(int64 typeVal, int64 reason);
	[LinkName("QFocusEvent_Clone")]
	public static extern void* QFocusEvent_Clone(void* c_this);
	[LinkName("QFocusEvent_GotFocus")]
	public static extern bool QFocusEvent_GotFocus(void* c_this);
	[LinkName("QFocusEvent_LostFocus")]
	public static extern bool QFocusEvent_LostFocus(void* c_this);
	[LinkName("QFocusEvent_Reason")]
	public static extern int64 QFocusEvent_Reason(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QFocusEvent_Delete")]
	public static extern void QFocusEvent_Delete(void* self);
}
public interface IQPaintEvent
{
	void* NativePtr { get; }
}
public class QPaintEvent : IQPaintEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQRegion paintRegion)
	{
		this.nativePtr = CQt.QPaintEvent_new((paintRegion == default) ? default : (void*)paintRegion.NativePtr);
	}
	
	public ~this()
	{
		CQt.QPaintEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QPaintEvent_Clone(this.nativePtr);
	}
	
	public void* Rect()
	{
		return CQt.QPaintEvent_Rect(this.nativePtr);
	}
	
	public void* Region()
	{
		return CQt.QPaintEvent_Region(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QPaintEvent_new")]
	public static extern void* QPaintEvent_new(void* paintRegion);
	[LinkName("QPaintEvent_new2")]
	public static extern void* QPaintEvent_new2(void* paintRect);
	[LinkName("QPaintEvent_Clone")]
	public static extern void* QPaintEvent_Clone(void* c_this);
	[LinkName("QPaintEvent_Rect")]
	public static extern void* QPaintEvent_Rect(void* c_this);
	[LinkName("QPaintEvent_Region")]
	public static extern void* QPaintEvent_Region(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QPaintEvent_Delete")]
	public static extern void QPaintEvent_Delete(void* self);
}
public interface IQMoveEvent
{
	void* NativePtr { get; }
}
public class QMoveEvent : IQMoveEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQPoint pos, IQPoint oldPos)
	{
		this.nativePtr = CQt.QMoveEvent_new((pos == default) ? default : (void*)pos.NativePtr, (oldPos == default) ? default : (void*)oldPos.NativePtr);
	}
	
	public ~this()
	{
		CQt.QMoveEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QMoveEvent_Clone(this.nativePtr);
	}
	
	public void* Pos()
	{
		return CQt.QMoveEvent_Pos(this.nativePtr);
	}
	
	public void* OldPos()
	{
		return CQt.QMoveEvent_OldPos(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QMoveEvent_new")]
	public static extern void* QMoveEvent_new(void* pos, void* oldPos);
	[LinkName("QMoveEvent_Clone")]
	public static extern void* QMoveEvent_Clone(void* c_this);
	[LinkName("QMoveEvent_Pos")]
	public static extern void* QMoveEvent_Pos(void* c_this);
	[LinkName("QMoveEvent_OldPos")]
	public static extern void* QMoveEvent_OldPos(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QMoveEvent_Delete")]
	public static extern void QMoveEvent_Delete(void* self);
}
public interface IQExposeEvent
{
	void* NativePtr { get; }
}
public class QExposeEvent : IQExposeEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQRegion m_region)
	{
		this.nativePtr = CQt.QExposeEvent_new((m_region == default) ? default : (void*)m_region.NativePtr);
	}
	
	public ~this()
	{
		CQt.QExposeEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QExposeEvent_Clone(this.nativePtr);
	}
	
	public void* Region()
	{
		return CQt.QExposeEvent_Region(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QExposeEvent_new")]
	public static extern void* QExposeEvent_new(void* m_region);
	[LinkName("QExposeEvent_Clone")]
	public static extern void* QExposeEvent_Clone(void* c_this);
	[LinkName("QExposeEvent_Region")]
	public static extern void* QExposeEvent_Region(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QExposeEvent_Delete")]
	public static extern void QExposeEvent_Delete(void* self);
}
public interface IQPlatformSurfaceEvent
{
	void* NativePtr { get; }
}
public class QPlatformSurfaceEvent : IQPlatformSurfaceEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 surfaceEventType)
	{
		this.nativePtr = CQt.QPlatformSurfaceEvent_new(surfaceEventType);
	}
	
	public ~this()
	{
		CQt.QPlatformSurfaceEvent_Delete(this.nativePtr);
	}
